Quick and partial fix to socials cutting into other text on smaller devices

--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -122,6 +122,7 @@ a{
 }
 
 .side-logo{
+    z-index: 1;
     overflow-y: hidden;
     overflow-x: hidden;
     position: absolute;
@@ -204,7 +205,7 @@ a{
 
 .socials{
     position: absolute;
-    bottom: 5%;
+    bottom: 1%;
     height: 160px;
 }
 
